[package]
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
edition = "2018"
readme = "README.md"
name = "rust_tinyusb_wrapper"
version = "0.1.0"

[dependencies]
atsamg-hal = { git = "https://github.com/mcbridejc/atsamg5-hal", features = ["samg55j-rt"]}
cortex-m = "0.7.0"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
#libc = "0.2.99"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[build-dependencies]
cc = "1.0.69"

# this lets you use `cargo fix`!
[[bin]]
name = "rust_tinyusb_wrapper"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
